--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
     <!-- header design -->
     <header class="header">
-        <a href="#" class="logo">Portfolio.<span class="animate" style="--i:1;"></span></a>
+        <a href="#" class="logo">PsiFur AI<span class="animate" style="--i:1;"></span></a>
 
         <div class="bx bx-menu" id="menu-icon"><span class="animate" style="--i:2;"></span></div>
 
@@ -36,33 +36,27 @@
     <!-- home section design -->
     <section class="home show-animate" id="home">
         <div class="home-content">
-            <h1>Hi, I'm <span>Nishat Mahmud</span><span class="animate" style="--i:2;"></span></h1>
+            <h1>Psi <span>Fur Ai</span><span class="animate" style="--i:2;"></span></h1>
             <div class="text-animate">
-                <h3>Front-End Developer</h3>
+                <h3>An AI for Intellectuals</h3>
                 <span class="animate" style="--i:3;"></span>
             </div>
-            <p>I am a dedicated, self-assured, and eager learner who is constantly looking for opportunities to pick up
-                the new abilities.
-                I particularly want to put my knowledge and experience in Graphic Design, Web Development, and Android
-                Development to use.
-                To the best of my knowledge, avidly seeks to serve a professional organization with sincere devotion,
-                diligence, and commitment.
-                I have five years of experience managing a YouTube channel, therefore I also have knowledge with video
-                editing.
+            <p>
+                PsiFur AI offers cutting-edge real-time chatbot solutions and generative AI tools tailored for startups and businesses. Our platform empowers you to automate customer interactions, enhance engagement, and streamline operations, all with minimal coding experience required. Transform your business with PsiFur AI's innovative technology.
                 <span class="animate" style="--i:4;"></span>
             </p>
 
             <div class="btn-box">
-                <a href="#" class="btn">Hire Me</a>
-                <a href="#" class="btn">Let's Talk</a>
+                <a href="https://psifurai.streamlit.app/" class="btn" target="_blank">Try Now!</a>
+                <a href="https://github.com/PsiFur-Ai/docs/tree/main" class="btn">Know More!</a>
                 <span class="animate" style="--i:5;"></span>
             </div>
         </div>
 
         <div class="home-sci">
-            <a href="#"><i class='bx bxl-facebook'></i></a>
-            <a href="#"><i class='bx bxl-twitter'></i></a>
-            <a href="#"><i class='bx bxl-linkedin'></i></a>
+            <!-- <a href="#"><i class='bx bxl-facebook'></i></a> -->
+            <a href="https://twitter.com/iamharshit188"><i class='bx bxl-twitter'></i></a>
+            <a href="https://www.linkedin.com/in/harshit-tiwari-01387a1ba/"><i class='bx bxl-linkedin'></i></a>
             <span class="animate" style="--i:6;"></span>
         </div>
 
@@ -72,7 +66,7 @@
 
     <!-- about section design -->
     <section class="about" id="about">
-        <h2 class="heading">About <span>Me</span><span class="animate scroll" style="--i:1;"></span></h2>
+        <h2 class="heading">Why <span>PsiFur AI</span><span class="animate scroll" style="--i:1;"></span></h2>
 
         <div class="about-img">
             <img src="images/about.jpg" alt="">
@@ -81,13 +75,9 @@
         </div>
 
         <div class="about-content">
-            <h3>Hi there! Glad to see you here.<span class="animate scroll" style="--i:3;"></span></h3>
-            <p>Hello! Nishat Mahmud here. A technology fanatic!<br>
-                Currently, I am enrolled in the Department of
-                Computer Science and Engineering at Jagannath
-                University in Dhaka. My early education was
-                completed from Mymensingh Zilla School and Govt.
-                Ananda Mohon College in Mymensingh.
+            <h3>PsiFur AI<span class="animate scroll" style="--i:3;"></span></h3>
+            <p>Use PsiFur AI to automate customer interactions, enhance engagement, and streamline operations with minimal coding required. It's a powerful, user-friendly solution designed to boost efficiency and drive growth for your startup or business.
+            <p>Use PsiFur AI to automate customer interactions, enhance engagement, and streamline operations with minimal coding required. It's a powerful, user-friendly solution designed to boost efficiency and drive growth for your startup or business.
                 <span class="animate scroll" style="--i:4;"></span>
             </p>
 
