--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Responsive Personal Potfolio</title>
+    <title>PsiFur Ai: An AI for Individuals</title>
 
     <link rel="stylesheet" href="style.css">
 
@@ -292,8 +292,8 @@
     <!-- footer design -->
     <footer class="footer">
         <div class="footer-text">
-            <p>Copyright &copy; 2023 | Designed and
-                Maintenance by Nishat Mahmud | All
+            <p>Copyright &copy; 2024 | Designed and
+                Maintenance by Vansh Dixit | All
                 Rights Reserved</p>
 
             <span class="animate scroll" style="--i:1;"></span>
